# ruthenlabs

./: .gitignore  Cargo.toml  explanation.md
.githooks/: pre-commit
.github/workflows/: ci.yml
PRO/: ABOUT.md
PRO/indexer/: output.rs  watcher.rs
PRO/orchestrator/: session.go
PRO/sandbox/: archive.rs  gate.rs  scanner.rs  wasm.rs
PRO/sandbox/intercept/: audit.rs  mod.rs  quarantine.rs
PRO/sandbox/scanner/: dirscan.rs  entropy.rs  mod.rs
PRO/sandbox/threat/: hashdb.rs  mod.rs
PRO/sandbox/tui/: mod.rs
PRO/sandbox/watchdog/: mod.rs
UNIT-01/: .gitignore  Cargo.toml  Makefile  logo.txt
UNIT-01/.githooks/: install.sh  post-checkout
UNIT-01/.github/workflows/: ci.yml
UNIT-01/cli/: .dependency-cruiser.json  main.go  package.json
UNIT-01/cli/docs/: UX-FEATURE-MATRIX.md  model-compatibility-guide.md
UNIT-01/cli/src/: app.ts  diff-renderer.ts  diff-shim.d.ts  index.ts  markdown.ts  ollama.ts  types.ts
UNIT-01/cli/src/commands/: builtins.ts  registry.ts
UNIT-01/cli/src/config/: store.ts
UNIT-01/cli/src/daemons/: indexer.ts  lifecycle.ts  sandbox.ts  socket.ts
UNIT-01/cli/src/indexer/: chunker.ts  local.ts
UNIT-01/cli/src/llm/: ddg_test.html  executor.ts  ollama.ts  tools.ts
UNIT-01/cli/src/mcp/: client.ts
UNIT-01/cli/src/modes/: mode.ts
UNIT-01/cli/src/sandbox/: runner.ts
UNIT-01/cli/src/ui/: tui.ts
UNIT-01/cli/src/util/: ansi.ts  format.ts
UNIT-01/indexer/: Cargo.toml
UNIT-01/indexer/src/: daemon.rs  file_ops.rs  main.rs
UNIT-01/indexer/src/index/: chunker.rs  depgraph.rs  embed.rs  embed_onnx.rs  hybrid.rs  incremental.rs  mod.rs  query.rs  reranker.rs  ripgrep_bridge.rs  search.rs  storage.rs  vector.rs  watcher.rs
UNIT-01/indexer/src/models/: mod.rs
UNIT-01/indexer/src/walker/: mod.rs
UNIT-01/orchestrator/: README.md  auto_context.go  config.go  daemon.go  executor.go  go.mod  go.sum  hardware.go  history.go  llm_client.go  main.go  markdown.go  mcp.go  model_profile.go  package-lock.json  package.json  review.go  schema.go  session.go  stream_parser.go  theme.go  types.go  ui.go  workspace.go
UNIT-01/orchestrator/benchmarks/: cross_model.go
UNIT-01/orchestrator/clients/: indexer.go  sandbox.go
UNIT-01/orchestrator/internal/agent/: agent.go  agentic_fetch_tool.go  common_test.go  coordinator.go  coordinator_test.go
UNIT-01/orchestrator/internal/backend/: config_test.go
UNIT-01/orchestrator/internal/cmd/: root.go
UNIT-01/orchestrator/internal/config/: config.go  load.go  provider.go  store.go  store_test.go
UNIT-01/orchestrator/internal/ruthen/: client.go  indexer.go  sandbox.go
UNIT-01/orchestrator/src/: auto_context.rs  daemon.rs  executor.rs  hardware.rs  history.rs  index.mjs  llm_client.rs  main.rs  mcp.rs  model_profile.rs  review.rs  session.rs  socket.rs  stream_parser.rs  ui.rs  workspace.rs
UNIT-01/orchestrator/src/auth/: oauth.mjs
UNIT-01/orchestrator/src/clients/: indexer.rs  mod.rs  sandbox.rs  uds.rs
UNIT-01/orchestrator/src/config/: cli-args.mjs  env.mjs  settings.mjs
UNIT-01/orchestrator/src/core/: agent-loop.mjs  providers.mjs  session.mjs
UNIT-01/orchestrator/src/hooks/: engine.mjs
UNIT-01/orchestrator/src/mcp/: client.mjs
UNIT-01/orchestrator/test/: test.mjs
UNIT-01/sandbox/: Cargo.toml
UNIT-01/sandbox-mcp/: Cargo.toml
UNIT-01/sandbox-mcp/src/: main.rs
UNIT-01/sandbox/src/: lib.rs  main.rs
UNIT-01/sandbox/src/cage/: cgroups.rs  mod.rs  policy.rs  sandbox.rs
UNIT-01/sandbox/src/classifier/: magic.rs  mod.rs
UNIT-01/sandbox/src/config/: mod.rs
UNIT-01/sandbox/src/network/: domains.rs  mod.rs  proxy.rs
UNIT-01/sandbox/src/runner/: binary.rs  heuristic.rs  interpreter.rs  mod.rs
UNIT-01/sandbox/src/scanner/: dirscan.rs  entropy.rs  mod.rs
UNIT-01/sandbox/src/secrets/: mod.rs
UNIT-01/sandbox/src/shadow/: rollback.rs
UNIT-01/sandbox/src/socket/: config.rs  ecosystem.rs  mod.rs  stubs.rs
UNIT-01/sandbox/src/threat/: hashdb.rs  mod.rs
UNIT-01/sandbox/tests/: integration_test.rs
orchestrator/: Cargo.toml
orchestrator/src/: auto_context.rs  daemon.rs  history.rs  llm_client.rs  main.rs  markdown.rs  model_profile.rs  schema.rs  session.rs  stream_parser.rs  types.rs  workspace.rs
orchestrator/src/clients/: mod.rs  uds.rs
tasks/kshitij/: TASK.md  kshitijsandbox.md
tasks/sayan/: TASK.md
unit-ui/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DCO.txt  LICENSE  README.md
unit-ui/docs/: API.md  GUIDE.md  MANIFESTO.md  MONETIZATION.md  README.md  TIERS.md  VALIDATION.md
unit-ui/examples/: 01_assistant.rs  01_chat.rs  01_claude_code.rs  02_codex.rs  02_dashboard.rs  02_review.rs  03_gemini.rs  03_panel.rs  03_repl.rs  04_aider.rs  04_session.rs  04_setup.rs  05_debug.rs  05_multiagent.rs  05_opencode.rs  06_debug.rs  06_goose.rs  06_render.rs  07_explore.rs  07_warp.rs  07_wizard.rs  08_amp.rs  08_editor.rs  08_minimal.rs  09_crush.rs  09_ide.rs  09_monitor.rs  10_cline.rs  10_retro.rs  10_retro_pro.rs  all_widgets.rs  antigravity_cli.rs  assistant.rs  chat.rs  claude_code.rs  cli.rs  coder.rs  free_tier.rs  gemini_cli.rs  monitor.rs  (+6 more)
unit-ui/src/: config.rs  lib.rs
unit-ui/src/animation/: mod.rs  spinners.rs
unit-ui/src/style/: mod.rs  token.rs
unit-ui/src/theme/: mod.rs  palette.rs  providers.rs  themes.rs
unit-ui/src/widgets/: approval_prompt.rs  diff_view.rs  input.rs  markdown_block.rs  message.rs  mod.rs  multi_line_input.rs  session_timeline.rs  slash_menu.rs  spinner.rs  status_bar.rs  streaming_text.rs  thinking_block.rs  thinking_dots.rs  tool_call_card.rs
unit01/: AGENTS.md  COMPETITIVE_ANALYSIS.md  changes.md  package-lock.json  package.json  pro_needs.md  prompts.md  tsconfig.json
unit01/fanshui/: calculator.py  fact.py
unit01/scratch/: mock-prompt.ts
unit01/src/: ascii_art.md  backup.ts  calculator.py  chunker.ts  create_website_folder.ts  db.ts  difftracker.ts  index.ts  indexer.ts  llm.ts  proxy.ts  repomap.ts  sandbox.ts  session.ts  types.d.ts  ui.ts  watcher.ts
unit01/src/cli/: app.tsx  commands.ts  index.ts  index.tsx  parser.ts  prompt.ts  types.ts
unit01/src/cli/components/: index.ts  (+13 more)
unit01/src/core/: warnings.ts
(+93 files in other folders)
