[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
iocraft = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
home = "0.5"
regex = "1"
sysinfo = "0.32"
