[package]
name = "unit-ui"
version = "0.1.0"
edition = "2021"
description = "AI terminal widgets for Ratatui — streaming text, spinners, chat bubbles, input, status bar, slash menus, diff viewer, markdown, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/benevolentshrine/Ruthen-Labs"
homepage = "https://github.com/benevolentshrine/Ruthen-Labs"
readme = "README.md"
keywords = ["ratatui", "terminal", "tui", "ai", "chat"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
crossterm = "0.28"

# Examples are auto-discovered from examples/*.rs
