[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
authors = ["Ruthen Labs"]
description = "UNIT-01 Filesystem Indexer — Open-Core"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sled = "0.34"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
content_inspector = "0.2"
globset = "0.4"
bincode = "1.3"
sha2 = "0.10"
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
