[package]
name = "indexer"
version = "0.2.0"
edition = "2021"
authors = ["Ruthen Labs"]
description = "UNIT-01 Code Indexer — fast local code search engine for AI agents"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sled = "0.34"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
content_inspector = "0.2"
globset = "0.4"
bincode = "1.3"
sha2 = "0.10"
nix = { version = "0.29", features = ["signal", "process"] }
tantivy = "0.22"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
