[package]
name = "indexer"
version = "0.3.0"
edition = "2021"
authors = ["Ruthen Labs"]
description = "UNIT-01 Code Indexer — hybrid search (BM25 + embeddings) + file watching + AST chunking"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sled = "0.34"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
content_inspector = "0.2"
globset = "0.4"
bincode = "1.3"
sha2 = "0.10"
nix = { version = "0.29", features = ["signal", "process"] }
tantivy = "0.22"
rayon = "1.10"
notify = "6.1"
notify-debouncer-mini = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rusqlite = { version = "0.31", features = ["bundled"] }
seq-macro = "0.3"
regex = "1"
petgraph = "0.6"
once_cell = "1"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "load-dynamic"] }
tokenizers = "0.21"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"

[dev-dependencies]
tempfile = "3"
