[package]
name = "sandbox-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server wrapping the SANDBOX security cage into standardized tools"

[dependencies]
sandbox = { path = "../sandbox" }
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[features]
default = []
pro = []

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
